--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 
-    background-image: url("ElectricStation.jpg");
+    background-image: url("./ElectricStation.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
